=== HEAD

* Make the schema_dumper extension dump tables in alphabetical order in migrations (jeremyevans)

* Add Sequel.extension method for loading extensions, so you don't have to use require (jeremyevans)

* Allow bin/sequel to respect multiple -L options instead of ignoring all but the last one (jeremyevans)

* Add :command_timeout and :provider options to ADO adapter (hgimenez)

* Fix exception messages when Sequel.string_to_* fail (jeremyevans)

* Fix String :type=>:text generic type in the Firebird adapter (wishdev)

* Add Sequel.amalgalite adapter method (jeremyevans)

=== 3.0.0 (2009-05-04)

* Remove dead threads from connection pool if the pool is full and a connection is requested (jeremyevans)

* Add autoincrementing primary key support in the Oracle adapter, using a sequence and trigger (jeremyevans, Mike Golod)

* Make Model#save use the same server it uses for saving as for retrieving the saved record (jeremyevans)

* Add Database#database_type method, for identifying which type of database the object is connecting to (jeremyevans)

* Add ability to reset primary key sequences in the PostgreSQL adapter (jeremyevans)

* Fix parsing of non-simple sequence names (that contain uppercase, spaces, etc.) in the PostgreSQL adapter (jeremyevans)

* Support dumping indexes in the schema_dumper extension (jeremyevans)

* Add index parsing to PostgreSQL, MySQL, SQLite, and JDBC adapters (jeremyevans)

* Correctly quote SQL Array references, and handle qualified identifiers with them (e.g. :table__column.sql_subscript(1)) (jeremyevans)

* Allow dropping an index with a name different than the default name (jeremyevans)

* Allow Dataset#from to remove existing FROM tables when called without an argument, instead of raising an error later (jeremyevans)

* Fix string quoting on Oracle so it doesn't double backslashes (jeremyevans)

* Alias the count function call in Dataset#count, fixes use on MSSQL (akitaonrails, jeremyevans)
